[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SunScrape"
version = "0.2.0"
description = "A python library to scrape campaign finance records from the Florida Secretary of State"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Aric Chokey", email = "achokey21@gmail.com"}
]
keywords = ["campaign finance", "florida", "politics", "money", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/SunSentinel/SunScrape"
Repository = "https://github.com/SunSentinel/SunScrape"
Issues = "https://github.com/SunSentinel/SunScrape/issues"

[tool.setuptools]
packages = ["sunscrape"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

